--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "ts-rop-practice",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.ts",
+  "name": "task-management-server",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "packageManager": "pnpm@10.7.1",
+  "dependencies": {
+    "@hono/node-server": "^1.19.6",
+    "hono": "^4.10.4"
+  },
   "devDependencies": {
-    "@types/node": "^24.9.2",
-    "tsx": "^4.20.6",
-    "typescript": "^5.9.3"
+    "@types/node": "^20.11.17",
+    "tsx": "^4.7.1",
+    "typescript": "^5.8.3"
   }
 }
