--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "task-management-server",
-  "type": "module",
-  "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js"
-  },
-  "dependencies": {
-    "@hono/node-server": "^1.19.6",
-    "hono": "^4.10.4"
-  },
-  "devDependencies": {
-    "@types/node": "^20.11.17",
-    "tsx": "^4.7.1",
-    "typescript": "^5.8.3"
-  }
+	"name": "task-management-server",
+	"type": "module",
+	"scripts": {
+		"dev": "tsx watch src/index.ts",
+		"build": "tsc",
+		"start": "node dist/index.js",
+		"lint": "biome check",
+		"lint:fix": "biome check --apply",
+		"format": "biome format --write"
+	},
+	"dependencies": {
+		"@hono/node-server": "^1.19.6",
+		"hono": "^4.10.4"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^2.3.2",
+		"@types/node": "^20.11.17",
+		"tsx": "^4.7.1",
+		"typescript": "^5.8.3"
+	}
 }
