--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
 	},
 	"dependencies": {
 		"@hono/node-server": "^1.19.6",
-		"hono": "^4.10.4"
+		"hono": "^4.10.4",
+		"neverthrow": "^8.2.0",
+		"uuid": "^13.0.0"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^2.3.2",
+		"@biomejs/biome": "2.3.2",
 		"@types/node": "^20.11.17",
 		"tsx": "^4.7.1",
 		"typescript": "^5.8.3"
