--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
 	"name": "task-management-server",
 	"type": "module",
 	"scripts": {
-		"dev": "tsx watch src/index.ts",
+		"dev": "tsx watch src/main.ts",
 		"build": "tsc",
-		"start": "node dist/index.js",
+		"start": "node dist/main.js",
 		"lint": "biome check",
 		"lint:fix": "biome check --apply",
 		"format": "biome format --write"
