--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"@hono/node-server": "^1.19.6",
 		"hono": "^4.10.4",
 		"neverthrow": "^8.2.0",
-		"uuid": "^13.0.0"
+		"uuid": "^13.0.0",
+		"zod": "^4.1.12"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.2",
