--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
 		"build": "tsc",
 		"start": "node dist/main.js",
 		"lint": "biome check",
-		"lint:fix": "biome check --apply",
-		"format": "biome format --write"
+		"lint:fix": "biome check --fix",
+		"format": "biome format --write",
+		"prepare": "husky"
 	},
 	"dependencies": {
 		"@hono/node-server": "^1.19.6",
@@ -19,6 +20,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "2.3.2",
 		"@types/node": "^20.11.17",
+		"husky": "^9.1.7",
 		"tsx": "^4.7.1",
 		"typescript": "^5.8.3"
 	}
