--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@hono/node-server": "^1.19.6",
 		"hono": "^4.10.4",
+		"lowdb": "^7.0.1",
 		"neverthrow": "^8.2.0",
 		"uuid": "^13.0.0",
 		"zod": "^4.1.12"
