--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
 	"compilerOptions": {
 		"target": "es2022",
-		"module": "NodeNext",
+		"module": "ESNext",
+		"moduleResolution": "bundler",
 		"strict": true,
 		"verbatimModuleSyntax": true,
 		"skipLibCheck": true,
